# nccl-multiplane-plugin

./: README.md
nccl-2.29.7-dpfr-plugin/: CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  ThirdPartyNotices.txt
nccl-2.29.7-dpfr-plugin/bindings/ir/: CMakeLists.txt  Makefile  nccl_device_wrapper.h  nccl_device_wrapper__impl.h
nccl-2.29.7-dpfr-plugin/cmake/: NCCLConfig.cmake.in
nccl-2.29.7-dpfr-plugin/makefiles/: common.mk  examples.mk  formatting.mk  version.mk
nccl-2.29.7-dpfr-plugin/pkg/: Makefile
nccl-2.29.7-dpfr-plugin/plugins/net/dpfr_ib/: CMakeLists.txt  Makefile  README.md
nccl-2.29.7-dpfr-plugin/plugins/net/dpfr_ib/nccl/: common.h  err.h  net_device.h  net_v10.h  net_v2.h  net_v5.h  net_v6.h  net_v7.h  net_v9.h
nccl-2.29.7-dpfr-plugin/plugins/net/dpfr_ib/src/: comm.cc  comm.h  config.cc  config.h  context.cc  context.h  control_wire.cc  control_wire.h  cq_error.cc  cq_error.h  icmp_probe.cc  icmp_probe.h  log.cc  log.h  monitor.cc  monitor.h  mr.cc  mr.h  peer_control.cc  peer_control.h  plane_state.cc  plane_state.h  plugin.cc  qp_selector.cc  qp_selector.h  qp_slot.cc  qp_slot.h  replay_engine.cc  replay_engine.h  request.cc  request.h  verbs_device.cc  verbs_device.h  verbs_qp.cc  verbs_qp.h
nccl-2.29.7-dpfr-plugin/plugins/net/dpfr_ib/tests/: Makefile  test_core.cc
nccl-2.29.7-dpfr-plugin/src/: CMakeLists.txt  Makefile  allocator.cc  bootstrap.cc  ce_coll.cc  channel.cc  collectives.cc  debug.cc  dev_runtime.cc  enhcompat.cc  enqueue.cc  group.cc  init.cc  init_nvtx.cc  libnccl.map  mem_manager.cc  mnnvl.cc  nccl.h.in  nccl.pc.in  proxy.cc  sym_kernels.cc  transport.cc
(+527 files in other folders)
